# Sheer

./: .gitignore  IDEA.mmd  IPC.dot  README.md  Structure.dot  View.dot  check-version.js  construct.dot  construct.emmx  global.d.ts  package-lock.json  package.json  postcss.config.js  tailwind.config.js  test.tex  tsconfig.json  vite.config.ts
keyevent/: Cargo.toml  README.md
keyevent/src/: lib.rs
script/: build.js  build.ts  rollup.config.js
src/main/: .env  index.cjs.js  index.ts  tsconfig.json  vite.config.ts
src/main/lib/: ElectronAPI.ts
src/render/: App.vue  global.d.ts  index.css  index.html  main.js  main.ts  server.html  shim-vue.d.ts  shim-vuex.d.ts
src/render/cplusplus/: README.md  package.json  run.cpp  run.d.ts  run.js  run.wasm
src/render/js/: README.md  libary.ts
src/render/nested/: index.html  tsconfig.json
src/render/nested-first/: README.md  index.cjs.js  index.html  index.ts  tsconfig.json  vite.config.ts
src/render/nested-second/: index.cjs.js  index.html  index.ts  main.js  tsconfig.json
src/render/node/: README.md  config.ts  construct.dot  read.ts  utilFn.ts  utilInterface.ts  veiw.ts
src/render/public/: Sheer.config.ts  film.yml
src/render/python/: picture.py
src/render/router/: index.ts
src/render/server/: main.js  main.js.map  main.ts
src/render/store/: index.ts  mutations.ts  state.ts
src/render/utils/: lib.ts  utilFn.ts  utilInterface.ts  utils.ts
src/render/view/: Main.vue  proxy.vue
src/utils/: README.md  utilInterface.ts
utils/DataStructure/: Queue.js
utils/VideoScale/: README.md  main.go
(+86 files in other folders)
