[package]
name = "keyevent"
version = "0.1.0"
authors = ["wingdust <995315823@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.55"
gloo = "0.2.0"


[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
#  'CssStyleDeclaration',
  'HtmlElement',
#  'HtmlParagraphElement',
#  'HtmlTextAreaElement',
#  'Node',
  'Window',
  'console',
  'KeyboardEvent',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"
# 当没有 chromedriver在 $PATH 中时 这个需要联网下载 chromedriver

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
